# ScicppArpack

./: CMakeLists.txt  README.md
inc/: linalg.hpp
src/: linalg.cpp
src/.cache/clangd/index/: testv1.cpp.600628C9813F4FCE.idx  testv2.cpp.ED5C9E599F00CC9D.idx
src/.ipynb_checkpoints/: check_with_scipy-checkpoint.ipynb
test/debug/: CMakeLists.txt  debug.cpp
test/debug/.cache/clangd/index/: debug.cpp.DB8217A954EA19E5.idx
test/inc/: linalgv1.hpp
test/src/: CMakeLists.txt  check_with_scipy.ipynb  test.cpp  testv1.cpp  testv2.cpp
test/src/.cache/clangd/index/: testv2.cpp.F3ED472BA9E22616.idx
test/src/.ipynb_checkpoints/: check_with_scipy-checkpoint.ipynb
